--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,185 @@
-/**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+/* swiper */
+.swiper {
+    width: 100%;
+    height: 260rpx;
+    background-color: #fff;
+    box-shadow:0rpx 7rpx 20rpx 0rpx rgba(226,226,226,0.41);
+    margin-bottom: 50rpx;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.swiper_item_box {
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.swiper_item_box_left {
+    box-sizing: border-box;
+    padding: 0 50rpx 36rpx 50rpx;
+    width: 374rpx;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-
-.usermotto {
-  margin-top: 200px;
+.swiper_line {
+    width: 2rpx;
+    height: 172rpx;
+    background-color: #B3B3B3;
+}
+.swiper_item_box_right {
+    box-sizing: border-box;
+    padding: 0 42rpx 30rpx 42rpx;
+    width: 374rpx;
+    height: 100%;
+}
+.swiper_leftBox_top_date {
+    font-size: 32rpx;
+    font-weight: 500;
+    display: flex;
+    justify-content: space-between;
+}
+.swiper_leftBox_center_team {
+    height: 120rpx;
+    display: flex;
+    justify-content: space-between;
+}
+.swiper_leftBox_center_team_item {
+    display: flex;
+    flex-direction: column;
+}
+.swiper_leftBox_center_team_item_logo {
+    width: 78rpx;
+    height: 78rpx;
+    margin-bottom: 14rpx;
+}
+.swiper_leftBox_center_team_item_name {
+    font-size: 24rpx;
+    color: #333;
+    text-align: center;
+}
+.swiper_vs {
+    font-size: 32rpx;
+    color: #333;
+    padding-top: 20rpx;
+}
+.swiper_leftBox_bottom_odds {
+    font-size: 22rpx;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+}
+.swiper_leftBox_bottom_odds_text {
+    box-sizing: border-box;
+    width: 85rpx;
+    height: 30rpx;
+    background-color: #FF944D;
+    border-radius: 15rpx;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.swiper_rightBox_top {
+    text-align: center;
+}
+.swiper_experts_img {
+   width: 62rpx;
+   height: 62rpx; 
+}
+.swiper_rightBox_center_number {
+    font-size: 64rpx;
+    color: #FF142C;
+    text-align: center;
+}
+.swiper_rightBox_center_text {
+    font-size: 26rpx;
+    color: #333;
+    text-align: center;
+}
+.swiper_rightBox_bottom {
+    font-size: 30rpx;
+    color: #333;
+    text-align: right;
+}
+/* hot expert */
+.hotExpert_logo_box {
+    text-align: center;
+    margin-bottom: 28rpx;
+}
+.hotExpert_logo {
+    width: 336rpx;
+    height: 29rpx;
+}
+.hotExpert {
+    display: flex;
+    justify-content: space-evenly;
+}
+.hotExpert_item {
+    width: 175rpx;
+    height: 258rpx;
+    text-align: center;
+    display: flex;
+    flex-direction: column-reverse;
+    position: relative;
+}
+.hotExpert_item_img {
+    width: 104rpx;
+    height: 104rpx;
+    position: absolute;
+    top: 0rpx;
+    left: 35rpx;
+}
+.hotExpert_item_info {
+    box-sizing: border-box;
+    width: 175rpx;
+    height: 188rpx;
+    background-color: #fff;
+    padding-bottom: 15rpx;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+.hotExpert_item_name {
+    font-size: 22rpx;
+    color: #333;
+    padding-bottom: 15rpx;
+}
+.hotExpert_item_hit {
+    font-size: 26rpx;
+    color: #E83F50;
+    padding-bottom: 15rpx;
+}
+.hotExpert_item_sell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hotExpert_item_sell_text {
+    font-size: 20rpx;
+    color: #666;
+}
+.hotExpert_item_sell_number {
+    width: 38rpx;
+    height: 38rpx;
+    color: #fff;
+    font-size: 20rpx;
+    background-color: #FF2137;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.moreExpert {
+    width: 175rpx;
+    height: 258rpx;
+    font-size: 30rpx;
+    color: #666;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+.moreExpert_img {
+    width: 114rpx;
+    height: 114rpx;
+    margin-bottom: 20rpx;
 }
